public/css/main.css
/* ... */
footer > a:not(:first-child) {
    margin-left: 15px;
}

footer .social-icon {
    -webkit-filter: invert(1);
    filter: invert(1);
    height: 1em;
}

article.content-container {
    background-color: transparent;
    padding: 10px 10px 20px;
}

article .article-content {
    position: relative;
    border-radius: 7px;
    background-color: white;
    overflow: hidden;
}

article .article-content > * {
    padding: 30px;
}

article .article-content img,
article .article-content .img {
    padding: 0;
    height: 350px;
}

article.preview .article-content {
    background-color: rgba(0, 0, 0, .75);
    color: white;
}

article.preview .article-content .text {
    padding: 20px;
    text-align: center;
}

article.preview .article-content .text h1 {
    font-size: 1.5em;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

article.preview .article-content img,
article.preview .article-content .img {
    display: block;
    background-size: cover;
    background-color: black;
    background-position: center;
    height: auto;
    padding-top: 100%;
    border-radius: 7px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

article.preview .read-more-link {
    display: block;
    padding: 0 10px 20px!important;
    text-align: center;
}

#news-article-page article {
    position: relative;
    padding: 30px 0;
    background-color: white;
    z-index: 10;
}

#news-article-page article h1 {
    text-align: center;
    padding: 0 20px;
}

#news-article-page article #adjacent-articles-nav {
    margin: 0 auto;
    font-weight: 600;
    max-width: 900px;
    padding: 1em 30px;
}

#news-article-page article .article-content {
    background-color: transparent;
}

#news-article-page article .article-content .text {
    font-weight: 400;
    max-width: 900px;
    margin: 0 auto;
}

#news-article-page article .article-content .text a {
    text-decoration: underline;
}

#news-article-page article .img-reel {
    white-space: nowrap;
    overflow: hidden;
    text-align: center;
}

#news-article-page article .img-reel-nav {
    padding: 0;
    text-align: center;
}

#news-article-page article .img-reel-nav a {
    font-size: 1.5em;
    padding: 0 30px;
}

#news-article-page article .textbody-media {
    margin-top: 2em;
    margin-bottom: 2em;
    height: auto;
}

#news-article-page article .textbody-media > * {
    display: block;
    width: 600px;
    height: 400px;
    margin: 0 auto;
}

#news-article-page article img {
    cursor: pointer;
}

#news-article-page article .textbody-media img {
    width: auto;
}

#news-article-page article .textbody-media iframe:not([src*=youtu]) {
    width: 100%;
}

#news-article-page #image-modal .modal-body {
    height: 100vh;
    text-align: center;
    padding: 30px 0;
}

#news-article-page #image-modal img {
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    max-width: 100%;
    max-height: 100%;
    cursor: default;
}

@media (max-width: 600px) {
    #news-article-page article .textbody-media > *:not(img) {
        width: 100%;
    }
}

@media (max-width: 767px) {
    #news-article-page article .img-reel {
        padding-left: 0;
        padding-right: 0;
    }

    #news-article-page article .article-content img {
        object-fit: contain;
        width: 100%;
    }

    #news-article-page article .textbody-media img {
        height: auto;
    }

    #news-article-page article .textbody-media iframe {
        height: 200px;
    }
}

.artist-bio {
    overflow: hidden;
}

.artist-bio:not(:last-child) {
    margin-bottom: 50px;
}

.artist-bio .text {
    padding: 30px;
}

.artist-bio .text h1 {
    margin-bottom: .5em;
}

.artist-bio .text p {
    margin: 0;
}

.artist-bio .text .socials {
    font-size: 1.5em;
}

.artist-bio .text .socials img {
    height: 1em;
}

.artist-bio .text .socials a + a {
    margin-left: 1em;
}

.artist-bio .img-wrapper {
    padding: 0;
}

.artist-bio .img {
    height: 400px;
    background-color: rgb(180, 180, 180);
    background-size: cover;
    background-position: center;
    padding: 0;
    margin: 0 -15px;
}

@media (min-width: 768px) {
    .artist-bio {
        background-color: transparent;
    }

    .artist-bio:nth-child(odd) {
        background-image: linear-gradient(to left, white 55%, black 55%, black 100%);
    }

    .artist-bio:nth-child(even) {
        background-image: linear-gradient(to right, white 55%, black 55%, black 100%);
    }

    .artist-bio .img {
        margin: 0;
    }

    .artist-bio .img-wrapper::before,
    .artist-bio .img-wrapper::after {
        position: absolute;
        content: " ";
        top: 0;
        width: 120px;
        height: 100%;
        background-color: white;
        -webkit-transform: skew(-7deg);
        transform: skew(-7deg);
    }

    .artist-bio .img-wrapper::before {
        left: -95px;
    }

    .artist-bio .img-wrapper::after {
        right: -95px;
    }

    .artist-bio:nth-child(odd) .img-wrapper::before {
        background-color: black;
    }

    .artist-bio:nth-child(even) .img-wrapper::after {
        background-color: black;
    }

    .artist-bio .text {
        max-height: 400px;
        overflow: auto;
    }

    .artist-bio:nth-child(odd) .text {
        padding-right: 0;
    }

    .artist-bio:nth-child(even) .text {
        padding-left: 0;
    }

    .artist-bio .text {
        max-height: 400px;
        overflow: auto;
    }
}

.thumb {
    padding: 10px;
    background-color: transparent;
}

.thumb .content {
    border-radius: 7px;
    background-color: white;
    overflow: hidden;
}

.thumb .content > * {
    padding: 10px;
}

.thumb .img {
    padding-top: 100%;
    background-color: rgba(0,0,0,.5);
    background-size: cover;
    background-position: center;
}

.thumb .text {
    padding-left: 20px;
    padding-right: 20px;
    font-weight: 400;
}
/* ... */

